# toxic-game

./: .gitignore  README.md  pyproject.toml  toxic_game.toml
.cursor/rules/: architecture.mdc  config.mdc  gameplay.mdc  hardware-reference.mdc  project-overview.mdc  song-pipeline.mdc
deploy/: tg-arcade.service
tests/: test_arcade.py  test_audio_device.py  test_audio_playback.py  test_button_check.py  test_button_manager.py  test_config.py  test_debounce.py  test_game.py  test_game_check.py  test_gpio_availability.py  test_gpio_input.py  test_health.py  test_led_audio_compat.py  test_led_check.py  test_led_driver_layout.py  test_led_gameplay.py  test_led_output.py  test_led_patterns.py  test_notes.py  test_pong.py  test_pong_led.py  test_presence.py  test_rgbw_color.py  test_score_animation.py  test_scoring.py  test_sfx.py  test_song_config.py  test_song_config_tool.py  test_song_manager.py  test_strip_types.py  test_tap_quantize.py  test_tap_record.py  test_timing.py  test_wire_encoding.py
toxic_game/: __init__.py  config.py
toxic_game/engine/: __init__.py  arcade.py  button_manager.py  game.py  health.py  led_frames.py  led_gameplay.py  notes.py  pong.py  pong_led.py  presence.py  score_animation.py  scoring.py  song_config.py  song_manager.py  tap_quantize.py  timing.py
toxic_game/hw/: __init__.py  audio_device.py  audio_playback.py  gpio_input.py  led_audio_compat.py  led_output.py  led_patterns.py  rgbw_color.py  sfx.py  strip_types.py  wire_encoding.py
toxic_game/tools/: __init__.py  arcade.py  audio_check.py  button_check.py  game_check.py  led_check.py  pong_check.py  song_config_tool.py  tap_record.py
