[project]
name = "toxic-game"
version = "0.1.0"
description = "Cooperative two-player rhythm game for Raspberry Pi"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
pi = [
    "pygame>=2.6.1",
    "rpi-ws281x>=5.0.0",
]

[project.scripts]
tg-led = "toxic_game.tools.led_check:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["toxic_game"]

[tool.pytest.ini_options]
testpaths = ["tests"]
