[project]
name = "toxic-game"
version = "0.1.0"
description = "Cooperative two-player rhythm game for Raspberry Pi"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
pi = [
    "pygame>=2.6.1",
    "rpi-ws281x>=5.0.0",
    # On Raspberry Pi OS, RPi.GPIO is usually a system package
    # (python3-rpi.gpio). Offline installs can use a venv with
    # --system-site-packages instead.
]

[project.scripts]
tg-led = "toxic_game.tools.led_check:main"
tg-button = "toxic_game.tools.button_check:main"
tg-audio = "toxic_game.tools.audio_check:main"
tg-game = "toxic_game.tools.game_check:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["toxic_game"]

[tool.pytest.ini_options]
testpaths = ["tests"]
